--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,14 @@
 	 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   
+  <dependencies>
+  
+  <dependency>
+   <groupId>fr.afcepf.al30</groupId>
+   <artifactId>abstractBankWs</artifactId>
+   <version>0.0.1-SNAPSHOT</version>
+  </dependency>
+  
+  </dependencies>
+  
 </project>
